<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.cla</groupId>
    <artifactId>parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>apimod</module>
        <module>clientmod</module>
    </modules>

    <properties>
        <java.version>9</java.version>
        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <!--Syntaxically OK, but:-->
                    <!--[ERROR] Failed to execute goal org.apache.maven.plugins:maven-compiler-plugin:3.7.0:compile (default-compile) on project apimod: Compilation failure: Compilation failure:-->
                    <!--[ERROR] /G:/projets/wires/wires/wires/apimod/src/main/java/api/Base.java:[1,1]-->
                    <!--file should be on source path, or on patch path for module-->
                    <!--[ERROR] /G:/projets/wires/wires/wires/apimod/src/main/java/module-info.java:[1,1] -->
                    <!--file should be on source path, or on patch path for module-->
                    <!--<compilerArgs>-->
                        <!--<arg>&#45;&#45;class-path=/G/projets/wires/wires/wires/clientmod/target/test-classes;</arg>-->
                        <!--<arg>&#45;&#45;module-path=/G/projets/wires/wires/wires/clientmod/target/classes;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT.jar;</arg>-->
                        <!--<arg>&#45;&#45;source-path=/G/projets/wires/wires/wires/clientmod/src/test/java;</arg>-->
                        <!--<arg>-Xlint:all</arg>-->
                        <!--<arg>&#45;&#45;patch-module=clientmod=/G/projets/wires/wires/wires/clientmod/target/classes;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT-tests.jar;</arg>-->
                        <!--<arg>&#45;&#45;add-reads=apimod=ALL-UNNAMED</arg>-->
                        <!--<arg>&#45;&#45;add-reads=clientmod=ALL-UNNAMED</arg>-->
                        <!--<arg>&#45;&#45;add-exports=apimod/api=ALL-UNNAMED</arg>-->
                        <!--<arg>&#45;&#45;add-exports=clientmod/client=ALL-UNNAMED</arg>-->
                        <!--<arg>&#45;&#45;add-modules=apimod</arg>-->
                    <!--</compilerArgs>-->
                    <!--Compiles, but surefire fails in clientmod:-->
                    <!--<compilerArgs>-->
                        <!--<arg>&#45;&#45;module-source-path=./*/src/main/java;./*/src/test/java/;</arg>-->
                        <!--<arg>&#45;&#45;source-path=/G/projets/wires/wires/wires/apimod/src/main/java;/G/projets/wires/wires/wires/apimod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/main/java;</arg>-->
                        <!--<arg>-Xlint:all</arg>-->
                        <!--<arg>&#45;&#45;patch-module=clientmod=/G/projets/wires/wires/wires/clientmod/target/classes;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT.jar;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT-tests.jar;</arg>-->
                        <!--<arg>&#45;&#45;add-reads=apimod=ALL-UNNAMED</arg>-->
                        <!--<arg>&#45;&#45;add-reads=clientmod=ALL-UNNAMED</arg>-->
                        <!--<arg>&#45;&#45;add-exports=apimod/api=ALL-UNNAMED</arg>-->
                        <!--<arg>&#45;&#45;add-exports=clientmod/client=ALL-UNNAMED</arg>-->
                        <!--<arg>&#45;&#45;add-modules=apimod</arg>-->
                    <!--</compilerArgs>-->
<!--NoClassDefFoundError: client/test/DerivedTest (wrong name: clientmod/client/test/DerivedTest)-->
<!--at java.base/java.lang.ClassLoader.defineClass1(Native Method)-->
<!--at java.base/java.lang.ClassLoader.defineClass(ClassLoader.java:1007)-->
<!--at java.base/java.security.SecureClassLoader.defineClass(SecureClassLoader.java:174)-->
<!--at java.base/jdk.internal.loader.BuiltinClassLoader.defineClass(BuiltinClassLoader.java:801)-->
<!--at java.base/jdk.internal.loader.BuiltinClassLoader.findClassOnClassPathOrNull(BuiltinClassLoader.java:699)-->
<!--at java.base/jdk.internal.loader.BuiltinClassLoader.loadClassOrNull(BuiltinClassLoader.java:622)-->
<!--at java.base/jdk.internal.loader.BuiltinClassLoader.loadClass(BuiltinClassLoader.java:580)-->
<!--at java.base/jdk.internal.loader.ClassLoaders$AppClassLoader.loadClass(ClassLoaders.java:185)-->
<!--at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:496)-->
<!--at org.apache.maven.surefire.util.DefaultScanResult.loadClass(DefaultScanResult.java:131)-->
                    <compilerArgs>
                        <arg>--module-source-path=./*/src/main/java;./*/src/test/java/;</arg>
                        <arg>--source-path=/G/projets/wires/wires/wires/apimod/src/main/java;/G/projets/wires/wires/wires/apimod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/main/java;</arg>
                        <arg>-Xlint:all</arg>
                        <arg>--patch-module=clientmod=/G/projets/wires/wires/wires/clientmod/target/classes;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT.jar;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT-tests.jar;</arg>
                        <arg>--add-reads=apimod=ALL-UNNAMED</arg>
                        <arg>--add-reads=clientmod=ALL-UNNAMED</arg>
                        <arg>--add-exports=apimod/api=ALL-UNNAMED</arg>
                        <arg>--add-exports=clientmod/client=ALL-UNNAMED</arg>
                        <arg>--add-modules=apimod</arg>
                    </compilerArgs>
                    <!--<executable>&lt;!&ndash; path-to-javac &ndash;&gt;</executable>-->
                </configuration>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
    </dependencies>

</project>
